Bug 15544 - shadow_copy2 broken when current fileset's directories are removed
Summary: shadow_copy2 broken when current fileset's directories are removed
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-12-28 13:41 UTC by Volker Lendecke
Modified: 2024-01-31 20:42 UTC (History)
1 user (show)

See Also:


Attachments
Patch for 4.18 (3.84 KB, patch)
2024-01-03 14:11 UTC, Volker Lendecke
slow: review+
Details
Patch for 4.19 (3.99 KB, patch)
2024-01-03 14:11 UTC, Volker Lendecke
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Lendecke 2023-12-28 13:41:46 UTC
Have patch, need bugnumber
Comment 1 Samba QA Contact 2024-01-02 20:38:04 UTC
This bug was referenced in samba master:

a0bfadb32b83ab1e58290f84c298d345e21866d9
2cfbf43f706d5d29a5b1a5b13aac0661e42da0b1
Comment 2 Volker Lendecke 2024-01-03 14:11:31 UTC
Created attachment 18215 [details]
Patch for 4.18
Comment 3 Volker Lendecke 2024-01-03 14:11:57 UTC
Created attachment 18216 [details]
Patch for 4.19
Comment 4 Ralph Böhme 2024-01-03 14:45:36 UTC
Reassigning to Jule for inclusion in 4.18 and 4.19.
Comment 5 Jule Anger 2024-01-08 09:29:42 UTC
Pushed to autobuild-v4-{19,18}-test.
Comment 6 Samba QA Contact 2024-01-08 14:03:12 UTC
This bug was referenced in samba v4-18-test:

7f4d5a3737f96e1e2298963fb7e7541c67eacc50
529fb888a6c27819a228ffc08fd6cf0430707fa2
Comment 7 Samba QA Contact 2024-01-08 14:04:08 UTC
This bug was referenced in samba v4-19-test:

e97ec6ffb7aeeaf7d3faa29691aa613c94c71a22
f11643fee31995ea1124e4b0e53cd980d2056e5f
Comment 8 Jule Anger 2024-01-08 14:22:39 UTC
Closing out bug report.

Thanks!
Comment 9 Samba QA Contact 2024-01-08 14:38:56 UTC
This bug was referenced in samba v4-19-stable (Release samba-4.19.4):

e97ec6ffb7aeeaf7d3faa29691aa613c94c71a22
f11643fee31995ea1124e4b0e53cd980d2056e5f
Comment 10 Samba QA Contact 2024-01-31 20:42:10 UTC
This bug was referenced in samba v4-18-stable (Release samba-4.18.10):

7f4d5a3737f96e1e2298963fb7e7541c67eacc50
529fb888a6c27819a228ffc08fd6cf0430707fa2